--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
     <link rel="stylesheet" href="./index.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Crete+Round|Indie+Flower|Lacquer&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://kit.fontawesome.com/e333b62b87.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Tarek Ait Hamouda</title>
+    <title>Tarekamehaaaa!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
